--- a/lib/form.html
+++ b/lib/form.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form action="" method="post">
-    <input type="text" name="height">
-    <input type="text" name="weight">
+    <input type="text" name="lengt">
+    <input type="text" name="gewicht">
     <input type="submit">
 </form>
 
